@@ -360,6 +360,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 25462) Fix double-escaping for section edit link tooltips
 * action=raw was removed for Special:Statistics. This information is still
   available via the API
+* (bug 23934) Groups defined in $wgRevokePermissions but not in
+  $wgGroupPermissions now appear on Special:ListGroupRights
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
